--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -38,7 +38,8 @@
         <h2 class="fig">
             You favourite website
         </h2>
-        <a href="https://www.last.fm/user/orchidenver" target="_blank" title="lastfm" class="fig">Last.fm</a>
+        <center><a href="https://www.last.fm/user/orchidenver" target="_blank" title="lastfm" class="fig">Last.fm</a>
+        </center>
         <hr>
         <h2 class="fig">
             Tell about yourself
